<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation_view_behavior">com.pri.didouix.viewbehavior.AnimationViewBehavior</string>
    <string name="app_name">InterPhone</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="channel_area_aus">AUS FRS</string>
    <string name="channel_area_cn">CHINA FRS</string>
    <string name="channel_area_default">Default</string>
    <string name="channel_area_default_uhf">Default UHF</string>
    <string name="channel_area_default_vhf">Default VHF</string>
    <string name="channel_area_eu">EU FRS</string>
    <string name="channel_area_iran">IRAN FRS</string>
    <string name="channel_area_japan">JAPAN FRS</string>
    <string name="channel_area_ko">KOREA FRS</string>
    <string name="channel_area_malaysia">MALAYSIA FRS</string>
    <string name="channel_area_norway">NORWAY FRS</string>
    <string name="channel_area_rus">RUS FRS</string>
    <string name="channel_area_south_af">South Afirca FRS</string>
    <string name="channel_area_tw">CHINA TAIWAN FRS</string>
    <string name="channel_area_usa">USA FRS</string>
    <string name="channel_saving">Saving...</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy">Copy</string>
    <string name="didouix_sbl_tracking_progress_labe_pull_to_refresh">Pull down to refresh</string>
    <string name="didouix_sbl_tracking_progress_labe_refreshed">Refreshed successfully</string>
    <string name="didouix_sbl_tracking_progress_labe_refreshing">Refreshing…</string>
    <string name="didouix_sbl_tracking_progress_labe_release_to_refresh">Release to refresh</string>
    <string name="didouix_sbl_tracking_progress_labe_up_nodata">"That's all for now"</string>
    <string name="didouix_sbl_tracking_progress_labe_up_none">"That's all for now"</string>
    <string name="didouix_sbl_tracking_progress_labe_up_refresh">Just a sec…</string>
    <string name="didouix_sbl_tracking_progress_labe_up_refresh_fail">"Couldn't load items"</string>
    <string name="empty_message_warning">Once you start a new conversation, you will see it listed here, please switch to digital channel, select group or person, and click the add icon start a conversation.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fragment_camera_dialog_delete">Delete photo</string>
    <string name="fragment_camera_dialog_selectphoto">Pick photo</string>
    <string name="fragment_camera_dialog_selectphoto_one">Pick new photo</string>
    <string name="fragment_camera_dialog_takephoto">Take photo</string>
    <string name="fragment_camera_dialog_takephoto_one">Take new photo</string>
    <string name="fragment_camera_dialog_title">Replace photo</string>
    <string name="fragment_contacts_create">Creat new person contact</string>
    <string name="fragment_contacts_create_group">Creat new group contact</string>
    <string name="fragment_contacts_no_group">"You don't have any group contacts yet"</string>
    <string name="fragment_contacts_no_people">"You don't have any person contacts yet"</string>
    <string name="fragment_local_device_area">Device Area</string>
    <string name="fragment_local_device_area_add_subtitle">Device area</string>
    <string name="fragment_local_device_area_aus_db">AUS_FRS</string>
    <string name="fragment_local_device_area_china_db">China_FRS</string>
    <string name="fragment_local_device_area_china_taiwan_db">China_Taiwan_FRS</string>
    <string name="fragment_local_device_area_default_db">Default</string>
    <string name="fragment_local_device_area_default_uhf_db">Default_UHF</string>
    <string name="fragment_local_device_area_default_vhf_db">Default_UHF</string>
    <string name="fragment_local_device_area_delete">Delete</string>
    <string name="fragment_local_device_area_edit">Edit</string>
    <string name="fragment_local_device_area_eu_db">EU_FRS</string>
    <string name="fragment_local_device_area_iran_db">IRAN_FRS</string>
    <string name="fragment_local_device_area_japan_db">JAPAN_FRS</string>
    <string name="fragment_local_device_area_korea_db">KOREA_FRS</string>
    <string name="fragment_local_device_area_malaysia_db">MALAYSIA_FRS</string>
    <string name="fragment_local_device_area_norway_db">NORWAY_FRS</string>
    <string name="fragment_local_device_area_reset">Reset</string>
    <string name="fragment_local_device_area_rus_db">RUS_FRS</string>
    <string name="fragment_local_device_area_southaf_db">South_Afirca_FRS</string>
    <string name="fragment_local_device_area_usa_db">USA_FRS</string>
    <string name="fragment_local_device_area_usa_gmrs">USA FRS/GMRS</string>
    <string name="fragment_local_device_area_usa_gmrs_db">USA_FRS_GMRS</string>
    <string name="fragment_local_device_area_use">Activate</string>
    <string name="fragment_local_exit_app">Exit App</string>
    <string name="fragment_local_exit_app_dialog_content">Are you sure to exit app?</string>
    <string name="fragment_local_exit_app_dialog_title">Exit App</string>
    <string name="fragment_local_factory_reset">Factory Reset</string>
    <string name="fragment_local_factory_reset_dialog_content">Are you sure to factory reset?</string>
    <string name="fragment_local_factory_reset_dialog_title">Factory Reset</string>
    <string name="fragment_local_factory_reset_progress_dialog_title">Factory reseting...</string>
    <string name="fragment_local_information">Information</string>
    <string name="fragment_local_information_dmr_firmware_version">DMR Firmware version</string>
    <string name="fragment_local_information_macgyver_mod_version">MacGyver Mod Version</string>
    <string name="fragment_local_information_mcu_firmware_version">MCU Firmware version</string>
    <string name="fragment_local_information_software_version">Software version</string>
    <string name="fragment_local_setting">Setting</string>
    <string name="fragment_local_setting_busy_no_sending">Busy no sending</string>
    <string name="fragment_local_setting_busy_no_sending_disable">Transmission interrupted, usage disabled</string>
    <string name="fragment_local_setting_device_id">Device Id</string>
    <string name="fragment_local_setting_device_id_dialog_cancle">Cancel</string>
    <string name="fragment_local_setting_device_id_dialog_edit_reset_toast">The current region name is duplicate, please re-enter</string>
    <string name="fragment_local_setting_device_id_dialog_edit_toast">Input cannot be empty</string>
    <string name="fragment_local_setting_device_id_dialog_ok">Ok</string>
    <string name="fragment_local_setting_device_id_dialog_title">Device ID</string>
    <string name="fragment_local_setting_device_id_hint">(1-16776415)</string>
    <string name="fragment_local_use_assistant">Use Assistant</string>
    <string name="fragment_local_use_assistant_content_five_content">Switch to contact list screen, select the contact type ,and click the add icon.</string>
    <string name="fragment_local_use_assistant_content_five_title">5. How to create contact</string>
    <string name="fragment_local_use_assistant_content_four_content">"1.Switch to intercom screen, click the left or right arrow to switch channel
 2.Switch to channel list screen , click the channel item and select use."</string>
    <string name="fragment_local_use_assistant_content_four_title">4.How to switch channel</string>
    <string name="fragment_local_use_assistant_content_one_content">"1.Switch to intercom screen, long press intercom icon to send
2.Set PTT shortcut ,and long press PTT key to send."</string>
    <string name="fragment_local_use_assistant_content_one_title">1. How to send intercom</string>
    <string name="fragment_local_use_assistant_content_six_content">Switch to conversation list screen ,click the add icon to enter into the current conversation screen, if the list is not empty, click the conversation item to view the conversation.</string>
    <string name="fragment_local_use_assistant_content_six_title">6. How to send message</string>
    <string name="fragment_local_use_assistant_content_three_content">"1.Switch to intercom screen, long press channel information area.
 2.Switch to channel list screen, click the channel item and select edit."</string>
    <string name="fragment_local_use_assistant_content_three_title">3. How to edit channel</string>
    <string name="fragment_local_use_assistant_content_two_content">Switch to channel list screen, click the add icon to enter into channel add screen.</string>
    <string name="fragment_local_use_assistant_content_two_title">2. How to add channel</string>
    <string name="fragment_title_tap_channel">Channel</string>
    <string name="fragment_title_tap_contacts">Contact</string>
    <string name="fragment_title_tap_local">Device</string>
    <string name="fragment_title_tap_message">Message</string>
    <string name="fragment_title_tap_talkback">Intercom</string>
    <string name="interphone_contacts_no_edit_dialog_content">The contact is using now , can not be edited !</string>
</resources>