<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_camera_dialog_title" />
    <Button android:gravity="start|center" android:id="@id/local_delete_photo" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/fragment_camera_dialog_delete" android:paddingStart="30.0dip" />
    <Button android:gravity="start|center" android:id="@id/local_take_photo" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/fragment_camera_dialog_takephoto" android:paddingStart="30.0dip" />
    <Button android:gravity="start|center" android:id="@id/local_select_photo" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/fragment_camera_dialog_selectphoto" android:paddingStart="30.0dip" />
</LinearLayout>