<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/pri_title_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/fragment_title_margin_left" android:paddingTop="@dimen/fragment_title_margin_top" android:layout_width="fill_parent" android:layout_height="@dimen/fragment_title_height">
        <Button android:id="@id/back_button" android:background="@drawable/interphone_back_seletor" android:layout_width="30.0dip" android:layout_height="30.0dip" android:onClick="onClick" />
        <TextView android:textSize="@dimen/fragment_title_text_size" android:textColor="@color/pri_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/fragment_local_use_assistant" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/fragment_local_use_assitant_title_size" android:textColor="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_one_title" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_content_size" android:textColor="@color/pri_sub_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_one_content" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_title_size" android:textColor="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_two_title" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_content_size" android:textColor="@color/pri_sub_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_two_content" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_title_size" android:textColor="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_three_title" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_content_size" android:textColor="@color/pri_sub_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_three_content" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_title_size" android:textColor="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_four_title" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_content_size" android:textColor="@color/pri_sub_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_four_content" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_title_size" android:textColor="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_five_title" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_content_size" android:textColor="@color/pri_sub_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_five_content" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_title_size" android:textColor="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_six_title" />
            <TextView android:textSize="@dimen/fragment_local_use_assitant_content_size" android:textColor="@color/pri_sub_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fragment_local_use_assitant_content_margin_left" android:layout_marginRight="@dimen/fragment_local_use_assitant_content_margin_right" android:text="@string/fragment_local_use_assistant_content_six_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>