<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/interphone_dialog_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/pri_text_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/fragment_local_setting_device_id_dialog_title" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:paddingStart="40.0dip" android:paddingEnd="30.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/pri_sub_text_color" android:gravity="center_vertical" android:id="@id/local_device_id_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/fragment_local_setting_device_id_dialog_title" />
        <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_toRightOf="@id/local_device_id_title">
            <EditText android:textSize="14.0sp" android:textColor="@color/pri_text_color" android:textColorHint="@color/pri_hint_text_color" android:id="@id/local_device_id_edit" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="1" android:hint="@string/fragment_local_setting_device_id_hint" android:maxLength="8" android:digits="\ 1234567890" android:inputType="phone" android:textCursorDrawable="@drawable/interphone_edittext_cursor" />
            <View android:background="@color/pri_text_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/local_device_id_edit" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <Button android:textColor="@drawable/interphone_local_device_id_dialog_button_seletor" android:id="@id/local_device_id_cancle" android:background="@null" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/fragment_local_setting_device_id_dialog_cancle" android:layout_weight="1.0" />
        <Button android:textColor="@drawable/interphone_local_device_id_dialog_button_seletor" android:id="@id/local_device_id_ok" android:background="@null" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/fragment_local_setting_device_id_dialog_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>